# app/Documentation/Schemas.php
@@ -11,7 +11,7 @@ namespace App\Documentation;
  *     @OA\Property(property="message", type="string", example="Un code de vérification a été envoyé à votre adresse e-mail."),
  *     @OA\Property(property="transaction_id", type="string", example="b6f603d6-9ec0-4d07-83f1-e446286ad183"),
  *     @OA\Property(property="channel", type="string", example="email"),
- *     @OA\Property(property="reference_masked", type="string", example="EBodi.ext@orange.com")
+ *     @OA\Property(property="reference_masked", type="string", example="exmple.ext@orange.com")
  * )
  */
 
